--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/rapidjson"]
 	path = modules/rapidjson
 	url = https://github.com/miloyip/rapidjson/
+[submodule "modules/locationdb"]
+	path = modules/locationdb
+	url = git@github.com:acorg/locationdb.git
